      Closes: #721206.
  * debian/patches/20_mesa-llvmpipe-crash.patch,
    debian/patches/25_bison_2.6_ftbfs.patch:
    + Remove patches that were cherry-picked from upstream 2.1.x and we
      no longer use.
  * debian/rules:
    + Disable JIT and MacroAssembler on alpha. Closes: #721863.
    + Likewise for ppc64 and sparc64.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 01 Sep 2013 15:44:34 +0200

webkitgtk (2.1.90.1-1) experimental; urgency=low

  [ Gustavo Noronha Silva ]
  * New development release
  * debian/patches/series, debian/patches/03_dom_bindings_compat.patch:
  - removed patch; applied upstream
  * debian/patches/02_notebook_scroll.patch:
  - refreshed
  * debian/*.symbols:
  - updated with ABI additions

  [ Emilio Pozuelo Monfort ]
  * debian/rules:
    + Switch powerpc to stabs as it's currently taking too much space in
      the buildds.
  * debian/control:
    + Add myself to Uploaders.

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 29 Aug 2013 21:32:48 -0300

webkitgtk (2.1.4-3) experimental; urgency=low

  * debian/control, debian/libwebkitgtk-common-dev.install:
  - install the webkitdom headers in a separate dev package that can be
    depended on by both libwebkitgtk-3.0-dev and libwebkit2gtk-3.0-dev

 -- Gustavo Noronha Silva <kov@debian.org>  Fri, 23 Aug 2013 15:03:44 -0300

webkitgtk (2.1.4-2) experimental; urgency=low

  * debian/rules:
  - merge build and install rules so we can install right after building
    each flavor, and save space by cleaning up the build
  - clean *.pyc files in the clean target, to allow multiple builds in the
    same source tree again
  * debian/rules:
  - disable debug symbols sparc, and use stabs for armel, like we already
    do for armhf; their buildds are too constrained in terms of hardware
    resources

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 21 Aug 2013 23:13:58 -0300

webkitgtk (2.1.4-1) experimental; urgency=low

  * New development release