@@ -24,7 +24,11 @@ webkitgtk (2.1.90.1-2) UNRELEASED; urgency=low
     + Disable JIT and MacroAssembler on alpha. Closes: #721863.
     + Likewise for ppc64 and sparc64.
 
- -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 01 Sep 2013 15:44:34 +0200
+  [ Gustavo Noronha Silva ]
+  * debian/rules:
+    + Disable GLX on ARM, thanks to Sjoerd Simons.
+
+ -- Gustavo Noronha Silva <kov@debian.org>  Mon, 16 Sep 2013 15:02:08 -0300
 
 webkitgtk (2.1.90.1-1) experimental; urgency=low
 
